修改了模型，接口变动。
