# docs/swagger.yaml
@@ -1,6 +1,6 @@
 basePath: /api
 definitions:
-  controllers.LoginRequest:
+  controllers.LoginForm:
     properties:
       password:
         type: string
@@ -32,7 +32,7 @@ paths:
         name: admin
         required: true
         schema:
-          $ref: '#/definitions/controllers.LoginRequest'
+          $ref: '#/definitions/controllers.LoginForm'
       produces:
       - application/json
       responses:
@@ -80,7 +80,7 @@ paths:
           schema:
             $ref: '#/definitions/utils.Response'
         "401":
-          description: '{"success":false,"message":"请登录",result:null}'
+          description: '{"success":false,"message":"请登录后再试",result:null}'
           schema:
             $ref: '#/definitions/utils.Response'
         "404":
@@ -124,11 +124,11 @@ paths:
       - application/json
       responses:
         "200":
-          description: '{"success":true,"message":"成功","result":[{"key":"UPLOAD_FILE_SIZE_LIMIT","value":{"data":10},"label":"上传大小限制","isPublic":true,"createdAt":"2023-05-22T15:10:40.7958637+08:00","updatedAt":"2023-05-22T15:10:40.7958637+08:00"},{...}]}'
+          description: '{"success":true,"message":"成功","result":[{"key":"ADMIN_NAME","textValue":"admin","numberValue":0,"isText":true,"min":5,"max":16,"label":"管理员名称","isPublic":false,"createdAt":"2023-05-28T12:33:15.8278992+08:00","updatedAt":"2023-05-28T12:33:15.8278992+08:00"},{...}]}'
           schema:
             $ref: '#/definitions/utils.Response'
         "401":
-          description: '{"success":false,"message":"请登录",result:null}'
+          description: '{"success":false,"message":"请登录后再试",result:null}'
           schema:
             $ref: '#/definitions/utils.Response'
         "429":
@@ -153,7 +153,7 @@ paths:
           schema:
             $ref: '#/definitions/utils.Response'
         "401":
-          description: '{"success":false,"message":"请登录",result:null}'
+          description: '{"success":false,"message":"请登录后再试",result:null}'
           schema:
             $ref: '#/definitions/utils.Response'
         "429":
